--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swasth Mann Account Deletion</title>
+    <title>Swasth Mann - Wellness App Account Deletion</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -39,8 +39,8 @@
 <body>
 
     <div class="container">
-         <img src="swasthmann-logo.png" alt="Swasth Mann Logo" class="logo">
-        <h1 class="text-center">Swasth Mann Account Deletion</h1>
+         <img src="swasthmann-logo.png" alt="Swasth Mann - Wellness App Logo" class="logo">
+        <h1 class="text-center">Swasth Mann - Wellness App Account Deletion</h1>
 
         <p class="lead text-center">
             We're sorry to see you go! Please read the instructions below on how to request account deletion.
@@ -48,7 +48,7 @@
 
         <h3>Request to Delete Your Account</h3>
         <p>
-            If you wish to delete your Swasth Mann account, please send an email to <a href="mailto:admin@netspeq.com?subject=Account Deletion">admin@netspeq.com</a> with the following details:
+            If you wish to delete your Swasth Mann - Wellness App account, please send an email to <a href="mailto:admin@netspeq.com?subject=Account Deletion">admin@netspeq.com</a> with the following details:
         </p>
         <ul>
             <li>Your full name</li>
