--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 
     <div class="container">
-         <img src="swasthmann-logo.png" alt="Swasth Mann - Wellness App Logo" class="logo">
+         <img src="menu-logo.png" alt="Swasth Mann - Wellness App Logo" class="logo">
         <h1 class="text-center">Swasth Mann - Wellness App Account Deletion</h1>
 
         <p class="lead text-center">
